k8s/back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iti-gp-ingress
  namespace: back-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    alb.ingress.kubernetes.io/scheme: "internet-facing"    
    
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: nodejs-app
               port:
                 number: 8080
